--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for vt100
 
+0.1.3  2014-09-17
+    - Get the module compiling under Python 2
+
 0.1.2  2014-09-17
     - Add methods to the cell and color objects, rather than just exposing the
       structs and unions directly
